Fix: overflow-x de proyectos

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -103,6 +103,8 @@ em {
 	justify-self: center;
 	text-align: justify;
 	text-justify: inter-character;
+
+	overflow-x: hidden;
 }
 
 .subtitulos {
